Refact: move static elements to html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Links App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <section class="menu-panel">
+      <div class="menu-opener">Open menu</div>
+      <div class="category-menu-wrapper">
+        <ul class="category-menu"></ul>
+      </div>
+    </section>
+    
+    <section class="content"></section>
+    
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
