Create loading feat

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="src/reset.css">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
     <title>Links App</title>
   </head>
   <body>
+    <section class="loading-cover">Loading ...</section>
+
     <section class="menu-panel">
       <div class="menu-opener">Open menu</div>
       <div class="category-menu-wrapper">
