Create settings panel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <body>
     <section class="loading-cover">Loading ...</section>
 
+    <section class="settings-panel">
+      <ul class="settings-menu">
+        <li><a href="#" class="add-link-opener">Add Link</a></li>
+      </ul>
+    </section>
+
     <section class="menu-panel">
       <div class="menu-opener">Open menu</div>
       <div class="category-menu-wrapper">
