Create settings window

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
       </ul>
     </section>
 
+    <section class="settings-window">
+      <div class="link-creator">
+        <form>
+          <div><span>Link</span><input type="text"></div>
+          <div><span>Type</span><select></select></div>
+          <div><button>Add</button></div>
+        </form>
+      </div>
+    </section>
+
     <section class="menu-panel">
       <div class="menu-opener">Open menu</div>
       <div class="category-menu-wrapper">
