--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <section class="settings-panel">
       <ul class="settings-menu">
-        <li><a href="#" class="add-link-opener">Add Link</a></li>
+        <li><a href="#add-new-link" class="add-link-opener">Add Link</a></li>
       </ul>
     </section>
 
-    <section class="settings-window">
+    <section class="settings-window hide">
       <div class="link-creator">
         <form>
           <div><span>Link</span><input type="text"></div>
