Refact: link events handler

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <section class="settings-panel">
       <ul class="settings-menu">
-        <li><a href="#add-new-link" class="add-link-opener">Add Link</a></li>
+        <li><a class="link-creator-opener">Add Link</a></li>
       </ul>
     </section>
 
     <section class="settings-window hide">
       <div class="link-creator">
         <form>
-          <div><span>Link</span><input type="text"></div>
-          <div><span>Type</span><select></select></div>
-          <div><button>Add</button></div>
+          <div><span>Link</span><input type="text" name="link"></div>
+          <div><span>Type</span><select name="type"></select></div>
+          <div><button name="add">Add</button></div>
         </form>
       </div>
     </section>
