Create close button for new link creation panel

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <section class="settings-window hide">
       <div class="link-creator">
+        <div class="close-btn"><a>Close</a></div>
         <form>
           <div><span>Link</span><input type="text" name="link"></div>
           <div><span>Type</span><select name="type"></select></div>
