--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <form>
           <div><span>Link</span><input type="text" name="link"></div>
           <div><span>Type</span><select name="type"></select></div>
+          <div><span>Category</span><select name="category"></select></div>
           <div><button name="add">Add</button></div>
         </form>
       </div>
