Update link creator panel - add a field for description

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="close-btn"><a>Close</a></div>
         <form>
           <div><span>Link</span><input type="text" name="link"></div>
+          <div><span>Description</span><input type="text" name="topic"></div>
           <div><span>Category</span><select name="category"></select></div>
           <div><span>Type</span><select name="type"></select></div>
           <div><button name="add">Add</button></div>
