Style: link-creator open btn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section class="settings-panel">
       <ul class="settings-menu">
-        <li><a class="link-creator-opener">Add Link</a></li>
+        <li><a class="link-creator-opener">&#x002B;</a></li>
       </ul>
     </section>
 
