--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <section class="settings-window hide">
       <div class="link-creator">
         <div class="close-btn"><a>Close</a></div>
-        <form>
-          <div><span>Link</span><input type="text" name="link"></div>
-          <div><span>Description</span><input type="text" name="topic"></div>
-          <div><span>Category</span><select name="category"></select></div>
-          <div><span>Type</span><select name="type"></select></div>
-          <div><button name="add">Add</button></div>
+        <form class="link-form">
+          <div class="link-form-item"><span>Link</span><input type="text" name="link"></div>
+          <div class="link-form-item"><span>Description</span><input type="text" name="topic"></div>
+          <div class="link-form-item"><span>Category</span><select name="category"></select></div>
+          <div class="link-form-item"><span>Type</span><select name="type"></select></div>
+          <div class="link-form-item"><button name="add">Add</button></div>
         </form>
       </div>
     </section>
