Create edit button of link form

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="link-form-item"><span>Description</span><input type="text" name="topic"></div>
           <div class="link-form-item"><span>Category</span><select name="category"></select></div>
           <div class="link-form-item"><span>Type</span><select name="type"></select></div>
-          <div class="link-form-item"><button name="add">Add</button></div>
+          <div class="link-form-item"><button name="add">Add</button><button name="edit">Edit</button></div>
         </form>
       </div>
     </section>
