--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Links App</title>
   </head>
   <body>
-    <section class="loading-cover">Loading ...</section>
+    <!-- <section class="loading-cover">Loading ...</section> -->
 
     <section class="settings-panel">
       <ul class="settings-menu">
