Update link prop names - rename link to src, topic to description

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="link-creator">
         <div class="close-btn"><a>Close</a></div>
         <form class="link-form">
-          <div class="link-form-item"><span>Link</span><input type="text" name="link"></div>
-          <div class="link-form-item"><span>Description</span><input type="text" name="topic"></div>
+          <div class="link-form-item"><span>Link</span><input type="text" name="src"></div>
+          <div class="link-form-item"><span>Description</span><input type="text" name="description"></div>
           <div class="link-form-item"><span>Category</span><select name="category"></select></div>
           <div class="link-form-item"><span>Type</span><select name="type"></select></div>
           <div class="link-form-item"><button name="add">Add</button><button name="edit">Edit</button></div>
