style: create the content element of the page block

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </section>
     
-    <section class="content"></section>
+    <section class="content page__content page__content_adaptive"></section>
     
     <script type="module" src="/src/main.js"></script>
   </body>
