style: create the settings menu block and its elements

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body class="page page_adaptive">
     <!-- <section class="loading-cover">Loading ...</section> -->
 
-    <section class="settings-panel page__settings-panel page__settings-panel_adaptive">
+    <section class="page__settings-panel page__settings-panel_adaptive">
       <ul class="settings-menu">
-        <li><a class="link-creator-opener">&#x002B;</a></li>
+        <li><a class="settings-menu__link-form-opener">&#x002B;</a></li>
       </ul>
     </section>
 
