Create menu-panel block and related elements

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </section>
 
     <section class="menu-panel page__menu-panel page__menu-panel_adaptive">
-      <div class="menu-opener">Open menu</div>
-      <div class="category-menu-wrapper">
+      <div class="menu-panel__menu-opener page__menu-opener_adaptive">Open menu</div>
+      <div class="page__menu-wrapper_adaptive">
         <ul class="category-menu"></ul>
       </div>
     </section>
