--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="menu-panel page__menu-panel page__menu-panel_adaptive">
       <div class="menu-panel__menu-opener page__menu-opener_adaptive">Open menu</div>
       <div class="page__menu-wrapper_adaptive">
-        <ul class="category-menu"></ul>
+        <ul class="category-menu page__category-menu_adaptive"></ul>
       </div>
     </section>
     
