--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="page__settings-panel page__settings-panel_adaptive">
       <ul class="settings-menu">
         <li>
-          <a class="settings-menu__link-form-opener">&#x002B;</a>
+          <a class="settings-menu__link-form-opener theme__button_initial">&#x002B;</a>
         </li>
       </ul>
     </section>
