style: create theme settings window initial modifier

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
 
 
-    <section class="settings-window page__settings-window page__settings-window_hidden">
+    <section class="settings-window page__settings-window page__settings-window_hidden theme__settings-window_initial">
       <div class="link-window settings-window__link-window">
         <div class="link-window__close-btn"><a>Close</a></div>
         <form class="link-window__form">
