style: create theme link window close btn initial modifier

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section class="settings-window page__settings-window page__settings-window_hidden theme__settings-window_initial">
       <div class="link-window settings-window__link-window theme__link-window_initial">
-        <div class="link-window__close-btn"><a>Close</a></div>
+        <div class="link-window__close-btn theme__link-window-close-btn_initial"><a>Close</a></div>
         <form class="link-window__form">
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Link</span>
