fix: make form inputs appearance identical for different browsers

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           </div>
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Category</span>
-            <select name="category"></select>
+            <select class="link-window__form-select" name="category"></select>
           </div>
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Type</span>
-            <select name="type"></select>
+            <select class="link-window__form-select" name="type"></select>
           </div>
           <div class="link-window__form-item link-window__form-item_last">
             <button name="add">Add</button>
