--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <section class="page__settings-panel page__settings-panel_adaptive">
       <ul class="settings-menu">
         <li>
+          <a class="settings-menu__theme-changer theme__button_initial">&#127912;</a>
+        </li>
+        <li>
           <a class="settings-menu__link-form-opener theme__button_initial">&#x002B;</a>
         </li>
       </ul>
