Create theme menu element

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <a class="settings-menu__link-form-opener theme__button_initial">&#x002B;</a>
         </li>
       </ul>
+      <ul class="theme-menu theme__theme-menu_initial">
+        <li class="theme-menu__item theme__theme-menu-item_initial"><span data-theme="initial">Initial</span></li>
+        <li class="theme-menu__item theme__theme-menu-item_initial"><span data-theme="carbon">Carbon</span></li>
+      </ul>
     </section>
 
 
