--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </li>
       </ul>
       <ul class="theme-menu theme-menu_hidden theme__theme-menu_initial">
-        <li class="theme-menu__item theme__theme-menu-item_initial"><span data-theme="initial">Initial</span></li>
-        <li class="theme-menu__item theme__theme-menu-item_initial"><span data-theme="carbon">Carbon</span></li>
+        <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="initial"><span>Initial</span></li>
+        <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="carbon"><span>Carbon</span></li>
       </ul>
     </section>
 
