Update html - add placeholders for the link form

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <form class="link-window__form">
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Link</span>
-            <input class="link-window__form-input" type="text" name="src">
+            <input class="link-window__form-input" type="text" name="src" placeholder="https://somewhere.com">
           </div>
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Description</span>
-            <input class="link-window__form-input" type="text" name="description">
+            <input class="link-window__form-input" type="text" name="description" placeholder="Description of the resource">
           </div>
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Category</span>
