Update link form - create custo arrow for a select element

--- a/index.html
+++ b/index.html
@@ -40,11 +40,17 @@
           </div>
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Category</span>
-            <select class="link-window__form-select" name="category"></select>
+            <div class="link-window__select-arrow">
+              <select class="link-window__form-select" name="category"></select>
+              <span>&#8964;</span>
+            </div>
           </div>
           <div class="link-window__form-item">
             <span class="link-window__form-item-name">Type</span>
-            <select class="link-window__form-select" name="type"></select>
+            <div class="link-window__select-arrow">
+              <select class="link-window__form-select" name="type"></select>
+              <span>&#8964;</span>
+            </div>
           </div>
           <div class="link-window__form-item link-window__form-item_last">
             <button name="add">Add</button>
