style: settings menu buttons

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <section class="page__settings-panel page__settings-panel_adaptive">
       <ul class="settings-menu">
-        <li>
-          <a class="settings-menu__theme-changer theme__button_initial">&#127912;</a>
+        <li class="settings-menu__item theme__settings-menu-item_initial">
+          <a class="settings-menu__theme-changer theme__button_initial">&#128396;</a>
         </li>
-        <li>
-          <a class="settings-menu__link-form-opener theme__button_initial">&#x002B;</a>
+        <li class="settings-menu__item theme__settings-menu-item_initial">
+          <a class="settings-menu__link-form-opener theme__button_initial">&#65291;</a>
         </li>
       </ul>
       <ul class="theme-menu theme-menu_hidden theme__theme-menu_initial">
