--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <ul class="theme-menu theme-menu_hidden theme__theme-menu_initial">
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="initial"><span>Initial</span></li>
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="carbon"><span>Carbon</span></li>
+        <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="rose"><span>Rose</span></li>
       </ul>
     </section>
 
