--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="initial"><span>Initial</span></li>
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="carbon"><span>Carbon</span></li>
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="rose"><span>Rose</span></li>
+        <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="emerald"><span>Emerald</span></li>
       </ul>
     </section>
 
