Create loading cover html element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Links App</title>
   </head>
   <body class="page page_adaptive theme_initial">
-    <!-- <section class="loading-cover">Loading ...</section> -->
+    <section class="loading-cover page__loading-cover">Loading ...</section>
 
     <section class="page__settings-panel page__settings-panel_adaptive">
       <ul class="settings-menu">
