Create loading cover label

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Links App</title>
   </head>
   <body class="page page_adaptive theme_initial">
-    <section class="loading-cover page__loading-cover">Loading ...</section>
+    <section class="loading-cover page__loading-cover">
+      <div class="loading-cover__container">
+        <span class="loading-cover__element">L</span>
+        <span class="loading-cover__element">o</span>
+        <span class="loading-cover__element">a</span>
+        <span class="loading-cover__element">d</span>
+        <span class="loading-cover__element">i</span>
+        <span class="loading-cover__element">n</span>
+        <span class="loading-cover__element">g</span>
+        <span class="loading-cover__element">.</span>
+        <span class="loading-cover__element">.</span>
+        <span class="loading-cover__element">.</span>
+      </div>
+    </section>
 
     <section class="page__settings-panel page__settings-panel_adaptive">
       <ul class="settings-menu">
