Create sapphire theme

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="carbon"><span>Carbon</span></li>
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="rose"><span>Rose</span></li>
         <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="emerald"><span>Emerald</span></li>
+        <li class="theme-menu__item theme__theme-menu-item_initial" data-theme="sapphire"><span>Sapphire</span></li>
       </ul>
     </section>
 
